# python-project-49

./: Makefile  README.md  pyproject.toml
brain_games/: game_tools.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  even.py  game_tools.py  gcd.py  prime.py  progression.py  progressions.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  game_tools.py
