[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = 
"
A project created as part of the Hexlet course. 
Three games with a mathematical focus were created here. 
To pass one of the games you need to correctly answer 3 questions.
"
repository = "https://github.com/FrissonFrisson/python-project-49.git"
classifiers = 
[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Unlicense",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment"
]

authors = ["FrissonFrisson <compton56rus@gmail.com>"]
readme = "README.md"
packages = [{ include = "brain_games" },]


[tool.poetry.dependencies]
python = "^3.11"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
